ATRAS/ThirdParty/Vieworks Imaging Solution 7/SDK/CPP/Include/VwUSB.API.h

			typedef void* VWUSB_HANDLE;
			typedef void* HINTERFACE;
			typedef void* HCAMERA;
			FUNCTION_IMPORTEXPORT VWSDK::RESULT OpenVwUSB(VWUSB_HANDLE* hVwUSB);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CloseVwUSB(VWUSB_HANDLE& hVwUSB);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwGetNumInterfaces(VWUSB_HANDLE hVwUSB, UINT* pNumInterfaces);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwGetNumCameras(VWUSB_HANDLE hVwUSB, UINT* aPNumCamera);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwOpenCameraByIndex(VWUSB_HANDLE hVwUSB, UINT nCameraIndex, HCAMERA* phCamera, UINT nNumBuffer, UINT nWidth, UINT nHeight,
				UINT nPacketSize, void* pUserPointer, ImageCallbackFn* pImageCallbackFn, DisconnectCallbackFn* pDisconnectCallbackFn = NULL);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwOpenCameraByName(VWUSB_HANDLE hVwUSB, char* pCameraName, HCAMERA* phCamera, UINT nNumBuffer, UINT nWidth, UINT nHeight,
				UINT nPacketSize, void* pUserPointer, ImageCallbackFn* pImageCallbackFn, DisconnectCallbackFn* pDisconnectCallbackFn = NULL);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwOpenInterfaceByIndex(VWUSB_HANDLE hVwUSB, UINT aNIndex, HINTERFACE* phInterface);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwOpenInterfaceByName(VWUSB_HANDLE hVwUSB, char* pInterfaceName, HINTERFACE* phInterface);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwDiscovery(VWUSB_HANDLE hVwUSB);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwDiscoveryInterfaceInfo(VWUSB_HANDLE hVwUSB, UINT nIndex, INTERFACE_INFO_STRUCT* pInterfaceInfoStruct);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT VwDiscoveryCameraInfo(VWUSB_HANDLE hVwUSB, UINT nIndex, CAMERA_INFO_STRUCT* pCameraInfoStruct);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT InterfaceOpenCameraByIndex(IN HINTERFACE hInstance, IN void* pCallbackParent, IN UINT nDevIndex, HCAMERA* phCamera, UINT nNumBuffer,
				UINT nWidth, UINT nHeight, UINT nPacketSize, ImageCallbackFn* pImageCallbackFn, DisconnectCallbackFn* pDisconnectCallbackFn = NULL);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT InterfaceOpenCameraByName(HINTERFACE hInterface, void* pParent, char* pName, HCAMERA* phCamera, UINT nNumBuffer,
				UINT nWidth, UINT nHeight, UINT nPacketSize, ImageCallbackFn* pImageCallbackFn, DisconnectCallbackFn* pDisconnectCallbackFn = NULL);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT InterfaceGetNumCameras(HINTERFACE hInterface, UINT* aPNumDevices);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT InterfaceGetCameraName(HINTERFACE hInterface, UINT aNDevIndex, char* aName, size_t* aPNameSize);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT InterfaceCloseInterface(HINTERFACE hInterface);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT InterfaceGetVwUSBHandle(IN HINTERFACE hInterface, OUT VWUSB_HANDLE* phVwUSBHandle);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraClose(HCAMERA hCamera);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGrab(HCAMERA hCamera);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraAcquisitionStop(HCAMERA hCamera);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraSnap(HCAMERA hCamera, UINT unFrame);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraAbort(HCAMERA hCamera);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetGrabCondition(HCAMERA hCamera, BOOL& bIsGrabbing);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraSetAcquisitionTimeOut(HCAMERA hCamera, UINT nTimeOut);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetAcquisitionTimeOut(HCAMERA hCamera, UINT* pnTimeOut);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetDeviceModelName(IN HCAMERA hCamera, IN int nIndex, OUT char* pInfo, INOUT size_t* pInfoSize);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetDeviceVersion(IN HCAMERA hCamera, IN int nIndex, OUT char* pInfo, INOUT size_t* pInfoSize);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetDeviceVendorName(IN HCAMERA hCamera, IN int nIndex, OUT char* pInfo, INOUT size_t* pInfoSize);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetDeviceID(IN HCAMERA hCamera, IN int nIndex, OUT char* pInfo, INOUT size_t* pInfoSize);
			FUNCTION_IMPORTEXPORT  VWSDK::RESULT CameraGetWidth(HCAMERA hCamera, UINT* punWidth);
			FUNCTION_IMPORTEXPORT  VWSDK::RESULT CameraGetHeight(HCAMERA hCamera, UINT* punHeight);
			FUNCTION_IMPORTEXPORT  VWSDK::RESULT CameraSetWidth(HCAMERA hCamera, UINT pnWidth);
			FUNCTION_IMPORTEXPORT  VWSDK::RESULT CameraSetHeight(HCAMERA hCamera, UINT pnHeight);
			FUNCTION_IMPORTEXPORT  VWSDK::RESULT CameraSetPixelFormat(HCAMERA hCamera, VWSDK::PIXEL_FORMAT pixelFormat);
			FUNCTION_IMPORTEXPORT  VWSDK::RESULT CameraGetPixelFormat(HCAMERA hCamera, VWSDK::PIXEL_FORMAT* pPixelFormat);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraChangeBufferFormat(HCAMERA hCamera, UINT nBufferNum, UINT nWidth, UINT nHeight, VWSDK::PIXEL_FORMAT pixelFormat);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetBufferInfo(IN HCAMERA hCamera, OUT UINT& nBufferNum, OUT UINT& nWidth, OUT UINT& nHeight, OUT VWSDK::PIXEL_FORMAT& pixelFormat);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetInterfaceHandle(IN HCAMERA hCamera, OUT HINTERFACE* phInterface);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetStreamInfo(IN HCAMERA hCamera, IN STREAM_INFO streamInfo, OUT UINT& nInfo);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraSetCustomCommand(IN HCAMERA hCamera, IN char* pCommand, IN char* pArg, IN size_t cbArgSize = 0, IN BOOL bSyncCMD = TRUE);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetCustomCommand(IN HCAMERA hCamera, IN char* pCommand, OUT char* pArg, INOUT size_t* pArgSize, IN int nCmdType = VWSDK::GET_CUSTOM_COMMAND_VALUE);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetEnumPropertyItems(IN HCAMERA hCamera, IN const char* pPropertyName, OUT char* pArg, INOUT size_t* pArgSize);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraSetUARTCustomCommand(IN HCAMERA hCamera, IN char* pCommand);
			FUNCTION_IMPORTEXPORT VWSDK::RESULT CameraGetUARTCustomCommand(IN HCAMERA hCamera, IN char* pCommand, OUT char* pArg, IN size_t* pArgSize);