ATRAS/ThirdParty/Vieworks Imaging Solution 7/SDK/CPP/Include/VwUSB.Global.h

	enum EventType
	{
		EVENT_TYPE_FRAME_DROP = 0x0000001,
		EVENT_TYPE_SENSOR_MASTER = 0x0000002,
		EVENT_TYPE_SENSOR_SLAVE = 0x0000003,
		EVENT_TYPE_LINK_SPEED = 0x0000004,
		EVENT_TYPE_TEMP_EXCEED_LIMIT = 0x0000005
	};
	enum STREAM_INFO
	{
		STREAM_INFO_NUM_OF_FRAMES_LOST,
		STREAM_INFO_NUM_PACKETS_MISSING
	};
		struct OBJECT_INFO
		{
			void*		pUserPointer;
			void*		pVwCamera;
			OBJECT_INFO()
			{
				pUserPointer = NULL;
				pVwCamera = NULL;
			}
		};
		struct IMAGE_INFO
		{
			VWSDK::RESULT			callbackResult;
			unsigned int			bufferIndex;
			VWSDK::PIXEL_FORMAT		pixelFormat;
			unsigned int			width;
			unsigned int			height;
			UINT64					unTimeStamp;
			UINT					ImageStatus;
			void*				pImage;
		};
		struct CAMERA_INFO_STRUCT
		{
			BOOL				error;
			VWSDK::RESULT				errorResult;
			unsigned int		index;
			char				name[256];
			char				vendor[128];
			char				model[128];
			char				ip[32];
			char				mac[32];

		public:
			CAMERA_INFO_STRUCT()
			{
				error = FALSE;
				errorResult = VWSDK::RESULT_ERROR;
				index = 0;
				// hCam = NULL;
				memset(name, 0, sizeof(name));
				memset(vendor, 0, sizeof(vendor));
				memset(model, 0, sizeof(model));
				memset(ip, 0, sizeof(ip));
				memset(mac, 0, sizeof(mac));
			}
		};
		struct INTERFACE_INFO_STRUCT
		{
			BOOL				error;
			VWSDK::RESULT				errorCause;
			unsigned int		index;
			char				name[256];
		};
		struct DISCONNECT_INFO
		{
			int					nCurrHeartBeatTimeOut;	//	Current heartbeat timeout millisecond. 
			int					nTimeOutTryCount;		//	Heartbeat timeout try count.
		};
		struct EVENT_DATA
		{
			__int64		llnBlockID;
			__int64		llnTimestamp;
			WORD			wEventID;
			WORD			wStreamChannelIndex;
			WORD			wBlockID;
			void*			pDeviceHandle;
		};
typedef void (ImageCallbackFn)(VWSDK::OBJECT_INFO* pObjectInfo, VWSDK::IMAGE_INFO* pImageInfo);
typedef void (DisconnectCallbackFn)(VWSDK::OBJECT_INFO* pObjectInfo, VWSDK::DISCONNECT_INFO tDisconnectInfo);
typedef void (EventControlCallbackFn)( char* pcaEventName, VWSDK::VwGenICam::EVENT_DATA* ptEventData);
typedef void (GeneralEventCallbackFn)( VWSDK::EventType eEventType );