ATRAS/ThirdParty/Vieworks Imaging Solution 7/Sample Code/Visual C# - 복사본/VwUSB.Demo.MultiCam.Window.Advance.CS/VwUSB.cs


    public class VwUSB   // USB
    {
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT OpenVwUSB(ref VWUSB_HANDLE hVwUSB);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CloseVwUSB(ref VWUSB_HANDLE hVwUSB);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwGetNumInterfaces(VWUSB_HANDLE hVwUSB, IntPtr pNumInterfaces);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwGetNumCameras(VWUSB_HANDLE hVwUSB, ref int aPNumCamera);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwOpenCameraByIndex(VWUSB_HANDLE hVwUSB, int nCameraIndex, ref HCAMERA phCamera, int nNumBuffer, int nWidth, int nHeight,
                                                         int nPacketSize, IntPtr pUserPointer, IntPtr pImageCallbackFn, IntPtr pDisconnectCallbackFn);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void ImageCallbackFn(IntPtr pObjectInfo, ref IMAGE_INFO pImageInfo);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwOpenCameraByName(VWUSB_HANDLE hVwUSB, IntPtr pCameraName, ref HCAMERA phCamera, int nNumBuffer, int nWidth,
                                                        int nHeight, int nPacketSize, IntPtr pUserPointer, IntPtr pImageCallbackFn, IntPtr pDisconnectCallbackFn);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwOpenInterfaceByIndex(VWUSB_HANDLE hVwUSB, int aNIndex, ref HINTERFACE phInterface);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwOpenInterfaceByName(VWUSB_HANDLE hVwUSB, IntPtr pInterfaceName, ref HINTERFACE phInterface);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwDiscovery(VWUSB_HANDLE hVwUSB);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwDiscoveryInterfaceInfo(VWUSB_HANDLE hVwUSB, int nIndex, ref INTERFACE_INFO_STRUCT pInterfaceInfoStruct);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT VwDiscoveryCameraInfo(VWUSB_HANDLE hVwUSB, int nIndex, ref CAMERA_INFO_STRUCT pCameraInfoStruct);

        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT InterfaceOpenCameraByIndex(HINTERFACE hInstance, IntPtr pCallbackParent, int nDevIndex, IntPtr phCamera, int nNumBuffer,
                                                                int nWidth, int nHeight, int nPacketSize, IntPtr pImageCallbackFn, IntPtr pDisconnectCallbackFn);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT InterfaceOpenCameraByName(HINTERFACE hInterface, IntPtr pParent, IntPtr pName, IntPtr phCamera, int nNumBuffer,
                                                               int nWidth, int nHeight, int nPacketSize, IntPtr pImageCallbackFn, IntPtr pDisconnectCallbackFn);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT InterfaceGetNumCameras(HINTERFACE hInterface, IntPtr aPNumDevices);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT InterfaceGetCameraName(HINTERFACE hInterface, int aNDevIndex, IntPtr aName, IntPtr aPNameSize);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT InterfaceCloseInterface(HINTERFACE hInterface);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT InterfaceGetVwUSBHandle(HINTERFACE hInterface, IntPtr phVwUSBHandle);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraClose(HCAMERA hCamera);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGrab(HCAMERA hCamera);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraAcquisitionStop(HCAMERA hCamera);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraSnap(HCAMERA hCamera, int aNFrame);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraAbort(HCAMERA hCamera);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetGrabCondition(HCAMERA hCamera, ref bool bIsGrabbing);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetWidth(HCAMERA hCamera, ref int aPWidth);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetHeight(HCAMERA hCamera, ref int aPHeight);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraSetWidth(HCAMERA hCamera, int aNWidth);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraSetHeight(HCAMERA hCamera, int aNHeight);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraSetPixelFormat(HCAMERA hCamera, PIXEL_FORMAT pixelFormat);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetPixelFormat(HCAMERA hCamera, ref PIXEL_FORMAT pPixelFormat);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraSetAcquisitionTimeOut(HCAMERA hCamera, int nTimeOut);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetAcquisitionTimeOut(HCAMERA hCamera, ref int pnTimeOut);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetDeviceModelName(HCAMERA hCamera, int uIndex, Byte[] pInfo, IntPtr pInfoSize);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetDeviceVersion(HCAMERA hCamera, int uIndex, Byte[] pInfo, IntPtr pInfoSize);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetDeviceVendorName(HCAMERA hCamera, int uIndex, Byte[] pInfo, IntPtr pInfoSize);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetDeviceID(HCAMERA hCamera, int uIndex, Byte[] pInfo, IntPtr pInfoSize);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraChangeBufferFormat(HCAMERA hCamera, int nBufferNum, int nWidth, int nHeight, PIXEL_FORMAT pixelFormat);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetBufferInfo(HCAMERA hCamera, IntPtr nBufferNum, IntPtr nWidth, IntPtr nHeight, IntPtr pixelFormat);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetInterfaceHandle(HCAMERA hCamera, IntPtr phInterface);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetStreamInfo(HCAMERA hCamera, STREAM_INFO streamInfo, IntPtr nInfo);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraSetCustomCommand(HCAMERA hCamera, Byte[] pCommand, Byte[] pArg);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetCustomCommand(HCAMERA hCamera, Byte[] pCommand, Byte[] pArg, IntPtr pArgSize, int nCmdType);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraSetUARTCustomCommand(HCAMERA hCamera, Byte[] pCommand);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetUARTCustomCommand(HCAMERA hCamera, Byte[] pCommand, Byte[] pArg, ref int nArgSize);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetPropertyCount(HCAMERA hCamera, IntPtr pCount);
        [DllImport("VwGigE.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetEnumPropertyItems(HCAMERA hCamera, Byte[] pPropertyName,  Byte[] pArg, IntPtr pArgSize );
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetPropertyInfo(HCAMERA hCamera, Byte[] pCommand, ref PROPERTY ptPropInfo);
        [DllImport("VwUSB.NET.V7.DLL", CallingConvention = CallingConvention.Cdecl)]
        public static extern RESULT CameraGetPropertyInfoUsingIndex(HCAMERA hCamera, int nIndex, ref PROPERTY ptPropInfo);


    }
}
